# example-devcontainer-volume

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
example_api/: main.py  test_main.py
