[tool.poetry]
name = "example-devcontainer-volume"
version = "0.1.0"
description = ""
authors = ["Kallan Gerard <kallan.gerard@mechanicalrock.io>"]
readme = "README.md"
packages = [{include = "example_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
fastapi = {extras = ["all"], version = "^0.85.1"}
python-multipart = "^0.0.5"
pydantic = "^1.10.3"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
